--- a/src/app/pages/chat/components/chat-page/chat-page.component.scss
+++ b/src/app/pages/chat/components/chat-page/chat-page.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  flex: 1;
+  min-height: 0;
 }
 
 .chat-toolbar {
